--- a/ATSProject/web/WEB-INF/jspf/footer.jspf
+++ b/ATSProject/web/WEB-INF/jspf/footer.jspf
@@ -1,5 +1,5 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
-<footer class="text-center pt-4 my-md-5 pt-md-5 border-top ">
+<footer class="footer text-center pt-4 my-md-5 pt-md-5 border-top">
     <h2>Java EE - ATS Project - Hotel Group</h2>
 </footer>
