--- a/ATSProject/web/WEB-INF/jspf/navigation.jspf
+++ b/ATSProject/web/WEB-INF/jspf/navigation.jspf
@@ -11,7 +11,7 @@
                         <a class="nav-link" href="index.jsp">Home <span class="sr-only">(current)</span></a>
                     </li>         
                     <li class="nav-item active">
-                        <a class="nav-link" href="">Employees <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="employee.jsp">Employees <span class="sr-only">(current)</span></a>
                     </li>   
                     <li class="nav-item active">
                         <a class="nav-link" href="">Tasks <span class="sr-only">(current)</span></a>
