--- a/ATSProject/web/WEB-INF/jspf/navigation.jspf
+++ b/ATSProject/web/WEB-INF/jspf/navigation.jspf
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="${pageContext.request.contextPath}/teams">Teams <span class="sr-only">(current)</span></a>
                     </li>  
                     <li class="nav-item active">
-                        <a class="nav-link" href="">Jobs <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="${pageContext.request.contextPath}/jobs">Jobs <span class="sr-only">(current)</span></a>
                     </li> 
                 </ul>
             </div>
